# routes/api.php
@@ -1,9 +1,10 @@
 <?php
 
-use App\UI\Http\Auth\AuthController;
 use App\UI\Http\Auth\LoginController;
 use App\UI\Http\Auth\RefreshTokenController;
+use App\UI\Http\User\CreateUserAccountController;
 use App\UI\Http\User\CreateUserController;
+use App\UI\Http\User\GetUserAccountsController;
 use App\UI\Http\User\GetUserController;
 use App\UI\Http\User\UpdateUserController;
 use Illuminate\Support\Facades\Route;
@@ -41,6 +42,8 @@ Route::prefix('api')
                     Route::get('/refresh-token', RefreshTokenController::class)->name('refresh_token');
                     Route::get('/users/{id}', GetUserController::class)->name('get_user');
                     Route::patch('/users/{id}', UpdateUserController::class)->name('update_user');
+                    Route::get('/users/{id}/accounts', GetUserAccountsController::class)->name('get_user_accounts');
+                    Route::post('/users/{id}/accounts', CreateUserAccountController::class)->name('create_user_accounts');
                 });
+            });
     });
-});
